Added common header

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -7,6 +7,9 @@ $black: #090909;
 // Fonts
 $font-header: 'Roboto Condensed', sans-serif;
 
+// Font-sizes
+$fs-lrg: 3rem;
+
 // Vertical rythm
 $rh-xxl: 60px;
 $rh-xlr: 48px;
